# hawk-client

./: .gitignore  README.md
hawk/: CMakeLists.txt  hawk_en_US.ts  main.cpp  main.qml  qml.qrc
hawk/Core/: JsonParser.cpp  JsonParser.h  PhonixClient.cpp  PhonixClient.h
hawk/View/: AboutView.qml  NavigationButton.qml  NavigtionBar.qml  UploadView.qml
